--- a/HeroDesigner.Schema/HeroDesigner.Schema.fsproj
+++ b/HeroDesigner.Schema/HeroDesigner.Schema.fsproj
@@ -9,4 +9,8 @@
     <Compile Include="Library.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
