--- a/HeroDesigner.Schema/HeroDesigner.Schema.fsproj
+++ b/HeroDesigner.Schema/HeroDesigner.Schema.fsproj
@@ -4,6 +4,11 @@
     <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>true</Optimize>
+    <Tailcalls>true</Tailcalls>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Library.fs" />
